# CoolYoutubeDownloader

./: .gitignore  CMakeLists.txt  README.md
cmake/: path.cmake  sqlite3_setup.cmake
include/: MainWindow.hpp
include/controllers/: ConvertingController.hpp  DownloadController.hpp
include/models/: DownloadedVideoDbModel.hpp
include/widgets/: LinkRecordsWidget.hpp  MultiDownloadigInfoWidget.hpp
src/: MainWindow.cpp  main.cpp
src/controllers/: ConvertingController.cpp  DownloadController.cpp
src/frontend/: LinkRecordsWidget.ui  MainWindow.ui  MultiDownloadigInfoWidget.ui
src/models/: DownloadedVideoDbModel.cpp
src/widgets/: LinkRecordsWidget.cpp  MultiDownloadigInfoWidget.cpp
